apply NBT through modifyItemStack